--- a/config/fm_train.conf
+++ b/config/fm_train.conf
@@ -1,7 +1,7 @@
 # 数据配置
 data_format = libsvm
-train_data_path = ../public_data/gisette/gisette_scale
-test_data_path = ../public_data/gisette//gisette_scale.t
+train_data_path = /workspace/public_data/gisette/gisette_scale
+test_data_path = /workspace/public_data/gisette//gisette_scale.t
 feature_dim = 5000
 
 # data_format = criteo
@@ -13,20 +13,28 @@ feature_dim = 5000
 model_type = fm
 activation_type = sigmoid
 loss_type = logloss
-optimizer_type = adagrad
-learning_rate = 0.001
-batch_size = 128
-epochs = 15
-l2_reg = 0.0005
-embedding_size = 8
+optimizer_type = Adagrad
+
+# 通用训练参数
+learning_rate = 0.01
+batch_size = 256
+epochs = 6
+log_interval = 10
+early_stop_rounds = 3
+random_seed = 42
+l2_reg = 0.005
+
+# FM特定参数
+embedding_size = 6
+regularization = 0.0001
 
 # 学习率调整
-lr_decay_epochs = 3        # 每隔多少轮降低学习率
-lr_decay_factor = 0.8      # 学习率衰减因子
-min_learning_rate = 1e-5   # 最小学习率
+lr_decay_epochs = 2
+lr_decay_factor = 0.7
+min_learning_rate = 1e-5
 
 # 训练配置
 num_threads = 1
 verbose = true
-log_interval = 10         # 日志打印频率，每训练多少批次打印一次日志
-model_save_path = ./model/fm_model.bin 
+log_interval = 10  
+model_save_path = /workspace/simple_flow/model/fm_model.bin 
