--- a/config/lr_train.conf
+++ b/config/lr_train.conf
@@ -1,7 +1,7 @@
 # 数据配置
 data_format = libsvm
-train_data_path = ./data/gisette_scale
-test_data_path = ./data/gisette_scale.t
+train_data_path = /workspace/public_data/gisette/gisette_scale
+test_data_path = /workspace/public_data/gisette//gisette_scale.t
 feature_dim = 5000
 
 # data_format = criteo
@@ -13,7 +13,7 @@ feature_dim = 5000
 model_type = lr
 activation_type = sigmoid
 loss_type = logloss
-optimizer_type = Adagrad
+optimizer_type = adagrad
 learning_rate = 0.01
 batch_size = 256
 epochs = 10
