--- a/config/lr_train.conf
+++ b/config/lr_train.conf
@@ -7,25 +7,27 @@ feature_dim = 5000
 # data_format = criteo
 # train_data_path = /workspace/public_data/criteo/dac/train.txt
 # test_data_path = /workspace/public_data/criteo/dac/test.txt
+# train_data_path = /workspace/public_data/criteo/dac/train_sample
+# test_data_path = /workspace/public_data/criteo/dac/train_sample
 # feature_dim = 1000000
 
 # 模型配置
 model_type = lr
 activation_type = sigmoid
 loss_type = logloss
-optimizer_type = adagrad
-learning_rate = 0.01
-batch_size = 256
-epochs = 10
+optimizer_type = Adagrad
+learning_rate = 0.05
+batch_size = 512
+epochs = 100
 l2_reg = 0.001
 
 # 学习率调整 - 调整为更温和的策略
-lr_decay_epochs = 5        # 每隔5轮降低学习率（之前是3轮）
-lr_decay_factor = 0.8      # 学习率衰减因子（之前是0.5，现在更温和）
-min_learning_rate = 1e-6   # 最小学习率
+lr_decay_epochs = 10        # 每隔5轮降低学习率（之前是3轮）
+lr_decay_factor = 0.8       # 学习率衰减因子（之前是0.5，现在更温和）
+min_learning_rate = 1e-6    # 最小学习率
 
 # 训练配置
 num_threads = 1
 verbose = true
-log_interval = 10         # 日志打印频率，每训练多少批次打印一次日志
+log_interval = 10          # 日志打印频率，每训练多少批次打印一次日志
 model_save_path = ./model/lr_model.bin 
