--- a/config/fm_train.conf
+++ b/config/fm_train.conf
@@ -1,24 +1,24 @@
-# # 数据配置
-# data_format = libsvm
-# train_data_path = /workspace/public_data/gisette/gisette_scale
-# test_data_path = /workspace/public_data/gisette//gisette_scale.t
-# feature_dim = 5000
+# 数据配置
+data_format = libsvm
+train_data_path = /workspace/public_data/gisette/gisette_scale
+test_data_path = /workspace/public_data/gisette//gisette_scale.t
+feature_dim = 5000
 
-data_format = criteo
-# train_data_path = /workspace/public_data/criteo/dac/train.txt
-# test_data_path = /workspace/public_data/criteo/dac/test_sample
-train_data_path = /workspace/public_data/criteo/dac/train_sample
-test_data_path = /workspace/public_data/criteo/dac/train_sample
-feature_dim = 1000000
+# data_format = criteo
+# # train_data_path = /workspace/public_data/criteo/dac/train.txt
+# # test_data_path = /workspace/public_data/criteo/dac/test_sample
+# train_data_path = /workspace/public_data/criteo/dac/train_sample
+# test_data_path = /workspace/public_data/criteo/dac/train_sample
+# feature_dim = 1000000
 
 # 模型配置
 model_type = fm
 activation_type = sigmoid
 loss_type = logloss
 optimizer_type = Adagrad
-learning_rate = 0.01
+learning_rate = 0.05
 batch_size = 1024
-epochs = 100
+epochs = 10
 early_stop_rounds = 3
 random_seed = 42
 l2_reg = 0.001
@@ -28,12 +28,12 @@ embedding_size = 6
 regularization = 0.0001
 
 # 学习率调整
-lr_decay_epochs = 10
+lr_decay_epochs = 2
 lr_decay_factor = 0.8
 min_learning_rate = 1e-5
 
 # 训练配置
-num_threads = 1
+num_threads = 8
 verbose = true
-log_interval = 100
+log_interval = 10
 model_save_path = /workspace/simple_flow/model/fm_model.bin 
