--- a/config/lr_train.conf
+++ b/config/lr_train.conf
@@ -1,15 +1,15 @@
-# 数据配置
-data_format = libsvm
-train_data_path = /workspace/public_data/gisette/gisette_scale
-test_data_path = /workspace/public_data/gisette//gisette_scale.t
-feature_dim = 5000
+# # 数据配置
+# data_format = libsvm
+# train_data_path = /workspace/public_data/gisette/gisette_scale
+# test_data_path = /workspace/public_data/gisette//gisette_scale.t
+# feature_dim = 5000
 
-# data_format = criteo
+data_format = criteo
 # # train_data_path = /workspace/public_data/criteo/dac/train.txt
 # # test_data_path = /workspace/public_data/criteo/dac/test.txt
-# train_data_path = /workspace/public_data/criteo/dac/train_sample
-# test_data_path = /workspace/public_data/criteo/dac/train_sample
-# feature_dim = 1000000
+train_data_path = /workspace/public_data/criteo/dac/train_sample
+test_data_path = /workspace/public_data/criteo/dac/train_sample
+feature_dim = 1000000
 
 # 模型配置
 model_type = lr
